<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<!--     <TextView -->
<!--         android:id="@+id/tvHeaderMyProfile" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:text="@string/myprofile" -->
<!--         android:textAppearance="?android:attr/textAppearanceLarge" -->
<!--         android:textSize="42dp" /> -->

    <TextView
        android:id="@+id/tvMyProfileNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/nameLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tvMyProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_toRightOf="@id/tvMyProfileNameLabel"
        android:text="@string/hello"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tvMyProfilePhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMyProfileName"
        android:layout_margin="20dp"
        android:text="@string/phoneLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tvMyProfilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMyProfileName"
        android:layout_margin="20dp"
        android:layout_toRightOf="@id/tvMyProfilePhoneLabel"
        android:text="@string/hello"
        android:textSize="32dp" />

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tvMyProfileNameLabel"
        android:layout_marginRight="100dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/llMyProfile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ivProfilePicture"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bMyProfileMedia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="50"
                android:text="@string/myMediaButton" />

            <Button
                android:id="@+id/bMyProfileApps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="50"
                android:text="@string/myAppsButton" />
        </LinearLayout>

        <Button
            android:id="@+id/bMyProfileSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/mySettingsButton" />
    </LinearLayout>

</RelativeLayout>